--- a/ProjetFinal_2147037/Views/EmissionTelevisions/Create.cshtml
+++ b/ProjetFinal_2147037/Views/EmissionTelevisions/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjetFinal_2147037.Models.EmissionTelevision
+﻿@model ProjetFinal_2147037.Models.VM_UtilisateurMotDePasse
 
 @{
     ViewData["Title"] = "Create";
@@ -7,45 +7,31 @@
 
 <h1>Create</h1>
 
-<h4>EmissionTelevision</h4>
+<h4>Utilisateur</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Nom" class="control-label"></label>
-                <input asp-for="Nom" class="form-control" />
-                <span asp-validation-for="Nom" class="text-danger"></span>
+                <label asp-for="Pseudo" class="control-label"></label>
+                <input asp-for="Pseudo" class="form-control" />
+                <span asp-validation-for="Pseudo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Descriptions" class="control-label"></label>
-                <input asp-for="Descriptions" class="form-control" />
-                <span asp-validation-for="Descriptions" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="EstCoreen" /> @Html.DisplayNameFor(model => model.EstCoreen)
-                </label>
+                <label asp-for="NoTelephone" class="control-label"></label>
+                <input asp-for="NoTelephone" class="form-control" />
+                <span asp-validation-for="NoTelephone" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cote" class="control-label"></label>
-                <input asp-for="Cote" class="form-control" />
-                <span asp-validation-for="Cote" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="NbVisionnement" class="control-label"></label>
-                <input asp-for="NbVisionnement" class="form-control" />
-                <span asp-validation-for="NbVisionnement" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CoutProduction" class="control-label"></label>
-                <input asp-for="CoutProduction" class="form-control" />
-                <span asp-validation-for="CoutProduction" class="text-danger"></span>
+                <label asp-for="MotDePasseHache" class="control-label"></label>
+                <input asp-for="MotDePasseHache" class="form-control" />
+                <span asp-validation-for="MotDePasseHache" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PlateformeId" class="control-label"></label>
-                <select asp-for="PlateformeId" class ="form-control" asp-items="ViewBag.PlateformeId"></select>
+                <input asp-for="PlateformeId" class="form-control" />
+                <span asp-validation-for="PlateformeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
