--- a/ProjetFinal_2147037/Views/EmissionTelevisions/IndexAvecViewSQL.cshtml
+++ b/ProjetFinal_2147037/Views/EmissionTelevisions/IndexAvecViewSQL.cshtml
@@ -8,8 +8,11 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="InfoUtilisateur">
+        Information des utilisateurs
+    </a>
 </p>
+
 <table class="table">
     <thead>
         <tr>
