--- a/ProjetFinal_2147037/Views/EmissionTelevisions/InfoUtilisateur.cshtml
+++ b/ProjetFinal_2147037/Views/EmissionTelevisions/InfoUtilisateur.cshtml
@@ -22,6 +22,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.PlateformeId)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.MotDePasseHache)
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -35,6 +38,9 @@
             </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.PlateformeId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MotDePasseHache)
                 </td>
         </tr>
 }
