FCT V1_4 et V1_5 fonctionnel

--- a/ProjetFinal_2147037/Views/EmissionTelevisions/Index.cshtml
+++ b/ProjetFinal_2147037/Views/EmissionTelevisions/Index.cshtml
@@ -5,10 +5,22 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Liste des émissions</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="IndexAvecViewSQL">V1_2__CreationVue</a>
+</p>
+
+<p>
+    <a asp-action="InfoUtilisateur">
+        V1_3__ChiffrementMdP
+    </a>
+</p>
+
+<p>
+    <a asp-action="AjouterImage">
+        V1_5__TraitementDesImages
+    </a>
 </p>
 <table class="table">
     <thead>
