--- a/ProjetFinal_2147037/Views/EmissionTelevisions/IndexAvecViewSQL.cshtml
+++ b/ProjetFinal_2147037/Views/EmissionTelevisions/IndexAvecViewSQL.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Liste d'acteur et leurs personnages</h1>
 
 <p>
     <a asp-action="InfoUtilisateur">
