--- a/ProjetFinal_2147037/Views/EmissionTelevisions/Index.cshtml
+++ b/ProjetFinal_2147037/Views/EmissionTelevisions/Index.cshtml
@@ -22,6 +22,19 @@
         V1_5__TraitementDesImages
     </a>
 </p>
+
+<form asp-action="Index" method="post">
+    <fieldset>
+        <label for="EstCoreen">EstCoreen</label>
+        <select name="EstCoreen">
+            <option value="false">False</option>
+            <option value="true">True</option>
+        </select>
+        <input min="0" max="5" name="PlateformeID" type="number" />
+        <input type="submit" value="Submit">
+    </fieldset>
+</form>
+
 <table class="table">
     <thead>
         <tr>
@@ -46,7 +59,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.Plateforme)
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -73,11 +85,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Plateforme.PlateformeId)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.EmissionTelevisionId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.EmissionTelevisionId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.EmissionTelevisionId">Delete</a>
-            </td>
+            
         </tr>
 }
     </tbody>
