FCT Vrai Fin TP

--- a/ProjetFinal_2147037/Views/EmissionTelevisions/Index.cshtml
+++ b/ProjetFinal_2147037/Views/EmissionTelevisions/Index.cshtml
@@ -27,6 +27,7 @@
     <fieldset>
         <label for="EstCoreen">EstCoreen</label>
         <select name="EstCoreen">
+            <option value="null"></option>
             <option value="false">False</option>
             <option value="true">True</option>
         </select>
